--- a/GlassScan/res/values/strings.xml
+++ b/GlassScan/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
   
     <string name="glass_scan">Glass Scan</string>
-    <string name="label_share">Tap to e-mail</string>
+    <string name="label_share">Tap to share</string>
     <string name="label_capture">Tap to capture</string>
 
     <!-- History -->
