go back to previous activity state on swap down, custom loading bar

--- a/GlassScan/res/values/strings.xml
+++ b/GlassScan/res/values/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">GlassScan</string>
+    <string name="app_name">EduScan</string>
     <string name="hello_world">Hello world!</string>
   
-    <string name="glass_scan">Glass Scan</string>
+    <string name="edu_scan">Edu Scan</string>
     <string name="label_share">Tap to share</string>
     <string name="label_capture">Tap to capture</string>
 
